--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://samamrani.github.io/WebCraft",
+  "homepage": "https://samamrani.github.io/WEBIW",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
@@ -15,7 +15,7 @@
     "react-dom": "^19.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.5",
+    "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
