--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://samamrani.github.io/WEBIW",
+  "homepage": "https://samamrani.github.io/webiw",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
